[tool.poetry]
name = "nat"
version = "0.1.0"
description = ""
authors = ["minaminao <minaminaoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
nat = "nat.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
